--- a/coffee.vcxproj.filters
+++ b/coffee.vcxproj.filters
@@ -7,6 +7,7 @@
     <ClCompile Include="src\sdk\entity\entity.cpp" />
     <ClCompile Include="src\features\chams.cpp" />
     <ClCompile Include="src\features\night.cpp" />
+    <ClCompile Include="src\features\bhop.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\utility\process\process.hpp" />
