--- a/coffee.vcxproj.filters
+++ b/coffee.vcxproj.filters
@@ -14,9 +14,8 @@
     <ClInclude Include="src\sdk\engine\engine.hpp" />
     <ClInclude Include="src\sdk\entity\entity.hpp" />
     <ClInclude Include="src\sdk\offsets.hpp" />
-    <ClInclude Include="src\sdk\sign_on_state.hpp" />
-    <ClInclude Include="src\sdk\class_id.hpp" />
     <ClInclude Include="src\features\features.hpp" />
-    <ClInclude Include="src\sdk\color.hpp" />
+    <ClInclude Include="src\sdk\clrrender.hpp" />
+    <ClInclude Include="src\sdk\enums.hpp" />
   </ItemGroup>
 </Project>
